docs: add more detail and fix typos